--- a/solidity/package.json
+++ b/solidity/package.json
@@ -9,6 +9,8 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "axios": "^0.25.0",
     "caver-js": "^1.0.0",
     "ipfs-http-client": "32.0.1",
@@ -18,6 +20,7 @@
     "truffle": "^5.0.31",
     "truffle-hdwallet-provider-klaytn": "^1.0.13-a",
     "web-vitals": "^2.1.4",
+    "web3": "^1.7.0",
     "webpack": "^4.44.2"
   },
   "scripts": {
