--- a/back/package.json
+++ b/back/package.json
@@ -17,6 +17,7 @@
     "helmet": "^4.6.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "node-schedule": "^2.1.0",
     "nodemon": "^2.0.15"
   }
 }
