--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.24.0",
     "framer-motion": "^4",
     "moment": "^2.29.1",
+    "node-schedule": "^2.1.0",
     "pymysql": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
