--- a/back/package.json
+++ b/back/package.json
@@ -12,11 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "caver-js": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "express-asyncify": "^1.0.1",
     "helmet": "^4.6.0",
+    "ipfs-http-client": "32.0.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "node-schedule": "^2.1.0",
     "nodemon": "^2.0.15"
   }
 }
