--- a/front/package.json
+++ b/front/package.json
@@ -23,7 +23,9 @@
     "recharts": "^2.1.6",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "ipfs-http-client": "32.0.1",
+    "caver-js": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
