--- a/back/package.json
+++ b/back/package.json
@@ -28,6 +28,8 @@
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "truffle": "^5.5.4",
+    "truffle-hdwallet-provider-klaytn": "^1.4.2",
     "web3": "^1.7.1"
   }
 }
